--- a/cricket-elo-ratings.ipynb
+++ b/cricket-elo-ratings.ipynb
@@ -139,7 +139,7 @@
     "df = elo.import_bbb_csv_file(\"example_data\\\\all_ipl_matches.csv\")\n",
     "\n",
     "#Just take games from 2024 to make sample size smaller\n",
-    "df= df.loc[full_df['start_date'] > '2024-01-01'].reset_index()\n",
+    "df= df.loc[df['start_date'] > '2024-01-01'].reset_index()\n",
     "print(df.head())"
    ]
   },
